--- a/localisation/braz_por/MD_map_modes_l_braz_por.yml
+++ b/localisation/braz_por/MD_map_modes_l_braz_por.yml
@@ -49,3 +49,8 @@
  MAPMODE_SCO_MAP_MODE_DESCRIPTION: "Estados membros (vermelho), observadores (rosa) e potenciais estados membros (vermelho claro) da OCS."
  SCO_map_mode_tooltip: "OCS"
  SCO_map_mode_tooltip_delayed: "Estados membros em vermelho, observadores em rosa e potenciais estados membros em vermelho claro."
+ MAPMODE_UNEMPLOYMENT_RATE_MAP_MODE_NAME: "Taxa de Desemprego"
+ MAPMODE_UNEMPLOYMENT_RATE_MODE: "Taxa de Desemprego"
+ MAPMODE_UNEMPLOYMENT_RATE_MODE_DESCRIPTION: "Este modo de mapa exibe a taxa de desemprego atual dos países."
+ unemployment_rate_map_mode_tooltip: "Taxa de desemprego em [FROM.CONTROLLER.GetNameWithFlag]"
+ unemployment_rate_map_mode_tooltip_delayed: "A taxa de desemprego em [FROM.CONTROLLER.GetNameWithFlag] é: [?FROM.CONTROLLER:total_unemployed_percentage_display|%Y]"
