--- a/localisation/french/MD_focus_PER_l_french.yml
+++ b/localisation/french/MD_focus_PER_l_french.yml
@@ -2724,7 +2724,7 @@
  PER_our_majlis: "Our Representatives"
  PER_our_majlis_desc: "The Majles are essentially our puppets, and passing laws will be fairly simple, despite the huge backlash amongst some of our people."
  PER_benevolancy: "Une démocratie"
- PER_benevolancy_desc: "The Iranian people want one thing, and one thing only, democracy. After fighting to achieve democracy two times now, it would be betraying the Iranian people by not granting them this simple wish that thousands have died for.."
+ PER_benevolancy_desc: "Le peuple iranien ne veut qu’une chose, et une seule : la démocratie. Après avoir lutté à deux reprises pour obtenir la démocratie, ce serait trahir le peuple iranien en ne lui accordant pas ce simple souhait pour lequel des milliers de personnes sont mortes."
  PER_constitutional_reforms: "Constitutional Reforms"
  PER_constitutional_reforms_desc: "The Iranian Constitution is in dire need of revisions. This newly written constitution will adhere to Secular and Democratic principles, whilst also putting the Iranian people's wish at the forefront of it all."
  PER_liberate_the_ballot: "Liberate the Ballot"
