--- a/localisation/french/MD_subparty_policies_l_french.yml
+++ b/localisation/french/MD_subparty_policies_l_french.yml
@@ -58,7 +58,7 @@
  IP_negligible_corruption_pp_bonus: "Gain de poids politique de la corruption négligeable"
  IP_emergency_powers: "Pouvoir illimité"
  IP_paramilitary_units_formed: "[ROOT.GetAdjective] Garde de la jeunesse"
- IP_paramilitary_units_formed_desc: "Une unité paramilitaire pour les [ROOT.GetHabitants] a été créée pour les habituer à la vie militaire."
+ IP_paramilitary_units_formed_desc: "Une unité paramilitaire pour [ROOT.GetAdjective] a été créée pour les habituer à la vie militaire."
  IP_good_old_days: "Le bon vieux temps"
  IP_stable_society: "Société stable"
  IP_patriotism: "Patriotisme"
