--- a/localisation/french/events_l_french.yml
+++ b/localisation/french/events_l_french.yml
@@ -1062,8 +1062,8 @@
  recognition.6.a: "Le combat continue..."
  recognition.7.t: "[FROM.GetName] rejoint les Nations Unies"
  recognition.7.d: "Suite à une intensification des efforts de la part du gouvernement [FROM.GetAdjective] pour obtenir la reconnaissance internationale de son indépendance, la nation de [FROM.GetNameDef] est devenue le dernier pays à rejoindre l'ONU. Les dirigeants du monde ont félicité [FROM.GetLeader] pour le nouveau statut du pays."
- recognition.7.a: "Les [FROM.GetHabitants] rejoignent la communauté internationale."
- recognition.8.t: "Les [FROM.GetHabitants] font pression pour reconnaître un État aspirant"
+ recognition.7.a: "Le peuple [FROM.GetAdjective] rejoint la communauté internationale."
+ recognition.8.t: "[FROM.GetAdjective] Pression pour reconnaître l'État en herbe"
  recognition.8.d: "Le gouvernement [FROM.GetAdjective] utilise son influence dans notre pays pour nous pousser à reconnaître l'état de [pressured_to_recognize]. Plus [FROM.GetNameDef] a de l'influence dans notre pays, plus il nous coûtera cher de les refuser."
  recognition.8.a: "Cet État mérite d'être reconnu!"
  recognition.8.b: "Nous refusons de reconnaître cet État sécessionniste!"
