--- a/localisation/polish/MD_map_modes_l_polish.yml
+++ b/localisation/polish/MD_map_modes_l_polish.yml
@@ -49,3 +49,8 @@
  MAPMODE_SCO_MAP_MODE_DESCRIPTION: "Państwa członkowskie (czerwony), obserwatorzy (różowy) i potencjalne państwa członkowskie (jasnoczerwony) SCO."
  SCO_map_mode_tooltip: "SKO"
  SCO_map_mode_tooltip_delayed: "Państwa członkowskie na czerwono, obserwatorzy na różowo, a potencjalne państwa członkowskie na jasnoczerwono."
+ MAPMODE_UNEMPLOYMENT_RATE_MAP_MODE_NAME: "Stopa bezrobocia"
+ MAPMODE_UNEMPLOYMENT_RATE_MODE: "Stopa bezrobocia"
+ MAPMODE_UNEMPLOYMENT_RATE_MODE_DESCRIPTION: "Ten tryb mapy wyświetla aktualną stopę bezrobocia w krajach."
+ unemployment_rate_map_mode_tooltip: "Stopa bezrobocia w [FROM.CONTROLLER.GetNameWithFlag]"
+ unemployment_rate_map_mode_tooltip_delayed: "Stopa bezrobocia w [FROM.CONTROLLER.GetNameWithFlag] wynosi: [?FROM.CONTROLLER:total_unemployed_percentage_display|%Y]"
