--- a/localisation/russian/MD_focus_GER_l_russian.yml
+++ b/localisation/russian/MD_focus_GER_l_russian.yml
@@ -2086,7 +2086,7 @@
  GER_boom_boom_TT: "[GER.GetFlag] §H[GER.GetName]§! сможет производить §Hядерное оружие§!"
  GER_bundeswehr_reform_decisions_TT: "£decision_icon_small Разблокирует решения '§HРеформ Бундесвера§!'"
  GER_more_warsupport_better: "§gIf we have more than§! §H40% or more War Support§!§g, they may be§! §Rintimated§! §ginto surrendering the islands!§!"
- GER_they_will_join_the_war: "They will §Hjoin the war§! alongside us!"
+ GER_they_will_join_the_war: "Они §Hприсоединятся к войне§! рядом с нами!"
  GER_torment_israel_npd_TT: "£decision_icon_small Разблокирует решения '§Hложного государства§!'"
  GER_CSU_BAY_TT: "£generic_conservatism_small §HCSU§! (§CB§!) will be the ruling government of [BAY.GetFlag] §HBavaria§!"
  GER_SPD_BAY_TT: "£generic_socialism_small §HSPD§! (§CB§!) will be the ruling government of [BAY.GetFlag] §HBavaria§!"
@@ -2188,11 +2188,11 @@
  GER_not_pay_us_TT: "[FROM.GetNameWithFlag] §RRefuses§! §Yto pay us back for war damages & reparations!§!"
  GER_pro_republic_TT: "§YТакой фокус может предотвратить превращение нас в§! §4недемократическую§! §Yнацию в будущем!§!"
  GER_Grundgesetz_tt: "Основной закон Федеративной Республики Германия"
- GER_oberst_TT: "We will send one of our §YGenerals§! to the Nato defence College "
- GER_oberst_I_TT: "We will send some of our §YOberst§! to the National General Staff Officer Course"
- GER_oberst_II_TT: "We will send some of our §YOberst§! to the field Officer Basic Course"
- GER_oberst_III_TT: "We will send one of our §YGenerals§! to the individual leadership skill course"
- GER_oberst_IV_TT: "We will send our §YGenerals§! to the Capability and structure of the armed forces course"
+ GER_oberst_TT: "Мы пошлем одного из наших §YГенералов§! в оборонный колледж НАТО"
+ GER_oberst_I_TT: "Мы пришлем некоторых из наших §YОберстов§! на Национальный курс офицеров генерального штаба"
+ GER_oberst_II_TT: "Мы пришлем некоторых из наших §YОберстов§! на базовый курс полевого офицера"
+ GER_oberst_III_TT: "Мы пошлем одного из наших §YГенералов§! на курс индивидуального лидерства"
+ GER_oberst_IV_TT: "Мы пошлем наших §YГенералов§! к курсу «Боеспособность и структура вооруженных сил»"
  GER_Deutsche_Bahn_mod_TT: "здесь вы можете увидеть преимущества расширения нашей железнодорожной компании."
  GER_military_cost2_tt: "Modifies §YMilitary Cost§! for §HBundeswehr§! by [?GER_military_cost2_change|-%] (Current: [?GER_military_cost2|Y%])"
  GER_Army_attack_tt: "Modifies §YArmy Attack§! for §HBundeswehr§! by [?GER_Army_attack_change|+%] (Current: [?GER_Army_attack|Y%])"
