--- a/localisation/russian/MD_focus_IRQ_l_russian.yml
+++ b/localisation/russian/MD_focus_IRQ_l_russian.yml
@@ -1901,15 +1901,15 @@
  IRQ_controlled_instability_idea: "Контролируемая нестабильность"
  IRQ_nuclear_experts: "Эксперты в области ядерной энергетики"
  IRQ_conventional_focus: "Традиционный фокус"
- IRQ_mek_revolted_already: "MEK Revolted Already"
+ IRQ_mek_revolted_already: "МЕК уже восстал"
  IRQ_war_with_shias: "Война с шиитами"
- iraq_md.100.t: "Iraq Installs Shi'ite Government"
- iraq_md.100.d: "The Iraqi people have overthrown the ruling state, and installed their very own Shi'ite government. This move brings about a glimmer of hope, as we can once more, make an attempt to restore our Iranian friends to their former way of life."
- iraq_md.100.a: "We must do it"
+ iraq_md.100.t: "В Ираке сформировано шиитское правительство"
+ iraq_md.100.d: "Иракский народ сверг правящее государство и установил свое собственное шиитское правительство. Этот шаг дает проблеск надежды, поскольку мы можем еще раз попытаться вернуть нашим иранским друзьям их прежний образ жизни."
+ iraq_md.100.a: "Мы должны это сделать"
  iraq_md.100.b: "No, it is a bad idea"
  iraq_md.101.t: "Hezbollah Sends a Request"
  iraq_md.101.d: "Hezbollah has sent us a very interesting offer, they are asking us for our help in restoring the former Islamic Republic, potentially opening up space for a greater alliance in the region."
- iraq_md.101.a: "We must do it"
+ iraq_md.101.a: "Мы должны это сделать"
  iraq_md.101.b: "No, it is a bad idea"
  iraq_md.102.t: "[FROM.GetName] Accepts"
  iraq_md.102.d: "The government of [FROM.GetName] has accepted our request, and will join up in arms against the tyrant, [PER.GetLeader]. Soon, our Islamic Brethern will rise up once more in Iran!"
@@ -1995,8 +1995,8 @@
  iraq_md.316.d: "Несколько месяцев назад Саддам Хусейн решил, что хочет разместить сотни мин вблизи курдской границы, чтобы предотвратить нападения местных повстанцев. Чувствуя, что курдский народ его не любит, Саддам был вынужден посетить регион в одиночку и встретиться с местными жителями в знак доброй воли. Затем Саддам взял машину из дворца и несколько часов ехал к границе с Курдистаном. В машине было достаточно топлива, чтобы доставить его до границы, а когда в машине кончился бензин, Саддам начал двигаться пешком. Забыв о минах, где-то по дороге Саддам наступил на фугас и погиб на месте."
  iraq_md.316.a: "Покойся с миром, наш любимый лидер"
  IRQ_temp_medical_cost: "Больничные сборы"
- IRQ_Saddam's_pissfits: "£SOV_paranoia_text_icon Ярость [IRQ.GetLeader]"
- IRQ_Saddam's_pissfits_desc: "Throughout his life, §H[IRQ.GetLeader]§! has been unable to control his £SOV_paranoia_text_icon  §RRage§!. Often directing his anger towards his £personnel_cost_multiplier_modifier_texticon  military personnel, or people living in [IRQ.GetFlag] §HIraq§!. His £SOV_paranoia_text_icon  §RRage§! instills fear within the people, which may make them less likely to slip up, but at a cost.\n\n£SOV_paranoia_text_icon  §RRage§! will increase through certain §Hevents, decisions, and focuses§! If £stability_texticon  §HStability§! is lower than §H40%§!, then £SOV_paranoia_text_icon  §RRage§! will have a chance at ticking up by §H1§! every month. If £SOV_paranoia_text_icon  §RRage§! is higher than §H25%§!, there will be random events with consequences that trigger. If £SOV_paranoia_text_icon  §RRage§! ever hits §H50%§!, §H[IRQ.GetLeader]§! will execute a random £personnel_cost_multiplier_modifier_texticon  General.£SOV_paranoia_text_icon  §RRage§! will gradually go down if £stability_texticon  §HStability§! is §H40%§! or higher.\n\n£SOV_paranoia_text_icon  §RRage§!: [?IRQ_saddam_pissboy|%]"
  IRQ_saddam_ages_TT: "§HСаддам Хусейн§! будет стареть и §RSстрадать от болезни Альцгеймера!§!"
  IRQ_saddam_is_saddened_TT: "§HСаддаму становится грустно§!"
  IRQ_alzheimers_TT: "Из-за §RБолезни Саддама§!, мы можем получать события о §HСаддаме§! странное поведение!"
+ IRQ_saddams_pissfits: "£SOV_paranoia_text_icon Ярость [IRQ.GetLeader]"
+ IRQ_saddams_pissfits_desc: "Throughout his life, §H[IRQ.GetLeader]§! has been unable to control his £SOV_paranoia_text_icon  §RRage§!. Often directing his anger towards his £personnel_cost_multiplier_modifier_texticon  military personnel, or people living in [IRQ.GetFlag] §HIraq§!. His £SOV_paranoia_text_icon  §RRage§! instills fear within the people, which may make them less likely to slip up, but at a cost.\n\n£SOV_paranoia_text_icon  §RRage§! will increase through certain §Hevents, decisions, and focuses§! If £stability_texticon  §HStability§! is lower than §H40%§!, then £SOV_paranoia_text_icon  §RRage§! will have a chance at ticking up by §H1§! every month. If £SOV_paranoia_text_icon  §RRage§! is higher than §H25%§!, there will be random events with consequences that trigger. If £SOV_paranoia_text_icon  §RRage§! ever hits §H50%§!, §H[IRQ.GetLeader]§! will execute a random £personnel_cost_multiplier_modifier_texticon  General.£SOV_paranoia_text_icon  §RRage§! will gradually go down if £stability_texticon  §HStability§! is §H40%§! or higher.\n\n£SOV_paranoia_text_icon  §RRage§!: [?IRQ_saddam_pissboy|%]"
