--- a/localisation/russian/MD_tooltips_l_russian.yml
+++ b/localisation/russian/MD_tooltips_l_russian.yml
@@ -204,14 +204,14 @@
  nationalist_fascists_are_not_in_power_or_coalition_tt: "§Y[Nat_Fascism_L]§! не в правящей коалиции."
  nationalist_military_junta_are_not_in_power_or_coalition_tt: "§Y[Nat_Autocracy_L]§! не в правящей коалиции."
  nationalist_monarchists_are_not_in_power_or_coalition_tt: "§Y[Monarchist_L]§! не в правящей коалиции."
- has_socialist_government: "Current ruling party is §YSocialist§!."
- has_communist_government: "Current ruling party is §YCommunist§!."
- has_environmentalist_government: "Current ruling party is §YEnvironmentalist§!."
- has_liberal_government: "Current ruling party is §YLiberal§!."
- has_conservative_government: "Current ruling party is §YConservative§!."
- has_reactionary_government: "Current ruling party is §YReactionary§!."
- has_autocratic_government: "Current ruling party is §YAutocratic§!."
- has_totalitarian_government: "Current ruling party is §YTotalitarian§!."
+ has_socialist_government: "Нынешняя правящая партия §YСоциалистическая§!"
+ has_communist_government: "Нынешняя правящая партия §YКоммунистическая§!"
+ has_environmentalist_government: "Нынешняя правящая партия §YЭколога§!"
+ has_liberal_government: "Нынешняя правящая партия §YЛиберальная§!"
+ has_conservative_government: "Нынешняя правящая партия §YКонсервативная§!"
+ has_reactionary_government: "Нынешняя правящая партия §YРеакционная§!"
+ has_autocratic_government: "Нынешняя правящая партия §YАвтократическая§!"
+ has_totalitarian_government: "Нынешняя правящая партия §Yтоталитарная§!"
  has_socialist_in_coalition: "Социалисты в коалиции"
  has_communist_in_coalition: "Коммунисты в коалиции"
  has_environmentalist_in_coalition: "Зеленые в коалиции"
@@ -228,8 +228,8 @@
  has_reactionary_government_or_in_coalition: "Имеет реакционную правящую партию"
  has_autocratic_government_or_in_coalition: "Автократическая коалиция или правящая партия"
  has_totalitarian_government_or_in_coalition: "Тоталитаристы в коалиции"
- opt_party12_tag_click_enabled: "[ROOT.GetName] is allowed to boost §Y[Caliphate_L]§!\n"
- opt_party13_tag_click_enabled: "[ROOT.GetName] is allowed to boost §Y[Neutral_Muslim_Brotherhood_L]§!\n"
+ opt_party12_tag_click_enabled: "[ROOT.GetName] разрешено усиливать §Y[Caliphate_L]§!\n"
+ opt_party13_tag_click_enabled: "[ROOT.GetName] разрешено усиливать §Y[Neutral_Muslim_Brotherhood_L]§!\n"
  has_western_aligned_government_TT: "Имеет прозападное правительство"
  has_emerging_aligned_government_TT: "Имеет реакционное правительство"
  has_neutral_aligned_government_TT: "Имеет нейтральное правительство"
@@ -238,8 +238,8 @@
  has_economically_liberal_government: "Одно из следующих утверждений должно быть правдой:\n§Y[conservatism_L]§! находится у власти.\n§Y[liberalism_L]§! находится у власти.\n§Y[Neutral_conservatism_L]§! находится у власти.\n§Y[Neutral_Libertarian_L]§! находится у власти.\n"
  has_economically_liberal_in_coalition: "Одно из следующих утверждений должно быть правдой:\n§Y[conservatism_L]§!в правящей коалиции.\n§Y[liberalism_L]§!в правящей коалиции.\n§Y[Neutral_conservatism_L]§!в правящей коалиции.\n§Y[Neutral_Libertarian_L]§!в правящей коалиции.\n"
  has_economically_liberal_government_or_in_coalition: "$has_economically_liberal_in_coalition$"
- western_autocrats_have_more_than_25_tt: "§Y[Western_Autocracy_L]§! Have More Than §Y25%§! Popularity (Current: [?party_pop_array^0|2%Y])\n"
- nationalist_monarchists_have_more_than_25_tt: "§Y[Monarchist_L]§! Have More Than §Y25%§! Popularity (Current: [?party_pop_array^0|2%Y])\n"
+ western_autocrats_have_more_than_25_tt: "§Y[Western_Autocracy_L]§! Получите больше §Y25%§! Популярность (Текущий: [?party_pop_array^0|2%Y])\n"
+ nationalist_monarchists_have_more_than_25_tt: "§Y[Monarchist_L]§! Получите больше §Y25%§! Популярность (Текущий: [?party_pop_array^23|2%Y])\n"
  econvent.from_booming_tt: "Наш экономический рост будет §Rуменьшен§! с §HЭкономического бума§!\n"
  econvent.from_fast_growth_tt: "Наш экономический рост будет §Rуменьшен§! с §HБыстрого роста§!\n"
  econvent.from_stable_growth_tt: "Наш экономический рост будет §Rуменьшен§! со §HСтабильного роста§!\n"
