--- a/localisation/simp_chinese/0_energy_l_simp_chinese.yml
+++ b/localisation/simp_chinese/0_energy_l_simp_chinese.yml
@@ -169,3 +169,7 @@
  total_fuel_silo_amount_tt_delayed: "§Y战略燃料储备§!是仓库、干式储存和其他§Y燃料§!类仓库的综合体。该建筑为您的国家提供了更多的§H燃料§!储存空间。"
  ENERGY_GENERATION_TOTAL_DELAYED_TT: "§Y修正§!：\n法律，理念，科技对§Y全部发电产出§!影响：[?modifier@energy_gain_multiplier|+%]\n法律，理念，科技对§Y可再生能源发电产出§!影响：[?modifier@renewable_energy_gain_multiplier|%+]\n法律，理念，科技对§Y化石燃料发电§!影响：[?modifier@fossil_pp_energy_generation_modifier|%+]\n法律，理念，科技对§Y核能发电§!影响：[?modifier@nuclear_energy_generation_modifier|%+]\n\n"
  TOTAL_CONSUMPTION_ENERGY_DELAYED_TT: "§Y修正§!：\n法律，理念，科技对§Y所有动力能耗§!影响：[?modifier@energy_use_multiplier|-%]\n法律，理念，科技对§Y人口能耗§!影响：[?modifier@pop_energy_use_multiplier|-%]\n法律，理念，科技对§Y民用工厂能耗§!影响：[?modifier@energy_use_modifier_civs|-%]\n法律，理念，科技对§Y办公园区能耗§!影响：[?modifier@energy_use_modifier_offices|-%]\n法律，理念，科技对§Y军用工厂和海军船坞能源能耗§!影响：[?modifier@energy_use_modifier_mils|-%]\n法律，理念，科技对§Y商业化农业区能源§!影响: [?modifier@energy_use_modifier_agriculture_district|-%]\n"
+ auto_accept_all_reactor_grade_purchases: "§Y自动接受§!反应堆级材料购买要求"
+ auto_accept_all_reactor_grade_purchases_desc: "自动接受来自国外的所有反应堆级材料采购。"
+ stop_auto_accept_all_reactor_grade_purchases: "停止§Y自动接受§!反应堆级材料购买要求"
+ stop_auto_accept_all_reactor_grade_purchases_desc: "停止自动接受来自国外的采购反应堆级材料要求。"
