--- a/localisation/simp_chinese/MD_focus_PER_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_PER_l_simp_chinese.yml
@@ -3741,7 +3741,7 @@
  PER_disband_revolutionary_council_desc: "'§H他给了我指挥的权力，他是裁决§!'\n\n2500多年来，伊朗国王一直使用“万王之王”这一称号。这个称号不能放弃，必须由孔雀王位的合法继承人来领取！"
  PER_our_majlis: "我们的代表"
  PER_our_majlis_desc: "议会本质上是我们的傀儡，尽管我们的一些人民强烈反对，但通过法律将相当简单。"
- PER_benevolancy: "民主制"
+ PER_benevolancy: "民主"
  PER_benevolancy_desc: "伊朗人民想要一件事，而且只有一件事，那就是民主。在两次为实现民主而奋斗之后，如果不满足伊朗人民这个成千上万人为之牺牲的简单愿望，那就是对他们的背叛。"
  PER_constitutional_reforms: "宪法改革"
  PER_constitutional_reforms_desc: "伊朗宪法迫切需要修改。这部新制定的宪法将坚持世俗和民主原则，同时也将伊朗人民的愿望放在首位。"
