--- a/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
@@ -4499,7 +4499,7 @@
  SLO.Nat_Fascism_desc: ""
  SLO.Nat_Populism: "£SLO_Nat_Populism 斯洛伐克民族党"
  SLO.Nat_Populism_desc: ""
- SLV.conservatism: "£SLV_western_conservative 斯洛伐克民主党"
+ SLV.conservatism: "£SLV_western_conservative 斯洛文尼亚民主党"
  SLV.conservatism_desc: ""
  SLV.liberalism: "£SLV_western_liberal  斯洛文尼亚自由民主党"
  SLV.liberalism_desc: ""
@@ -4742,7 +4742,7 @@
  SYR.Nat_Autocracy_desc: ""
  SUR.oligarchism: "£generic_oligarchism_small 首都第一司令部"
  SUR.oligarchism_desc: ""
- TAJ.conservatism: "£TAJ_western_conservative 塔吉克斯坦人民民主党"
+ TAJ.conservatism: "£TAJ_western_conservative 塔吉克斯坦民主党"
  TAJ.conservatism_icon: "£TAJ_western_conservative"
  TAJ.conservatism_desc: ""
  TAJ.socialism: "£TAJ_western_social_democrat 塔吉克斯坦社会民主党"
@@ -4751,7 +4751,7 @@
  TAJ.Communist-State: "£TAJ_emerging_communism 塔吉克斯坦共产党"
  TAJ.Communist-State_icon: "£TAJ_emerging_communism"
  TAJ.Communist-State_desc: ""
- TAJ.Conservative: "£TAJ_emerging_reactionary 塔吉克斯坦民主党"
+ TAJ.Conservative: "£TAJ_emerging_reactionary 塔吉克斯坦人民民主党"
  TAJ.Conservative_icon: "£TAJ_emerging_reactionary"
  TAJ.Conservative_desc: ""
  TAJ.anarchist_communism: "£TAJ_anarchist_communism 塔吉克斯坦社会党"
