--- a/localisation/simp_chinese/equipment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/equipment_l_simp_chinese.yml
@@ -142,8 +142,8 @@
  APC_7_desc: "装甲运兵车是一种装甲车辆，用于运送士兵小组投入战斗，然后士兵下车徒步作战。它们为士兵提供保护，但通常自身的攻击能力有限。由装甲运兵车运载的步兵称为机械化步兵。"
  APC_8: "2035型装甲运输车"
  APC_8_desc: "装甲运兵车是一种装甲车辆，用于运送士兵小组投入战斗，然后士兵下车徒步作战。它们为士兵提供保护，但通常自身的攻击能力有限。由装甲运兵车运载的步兵称为机械化步兵。"
- apc_equipment_0: "APC 1965"
- apc_equipment_1: "APC 1975"
+ apc_equipment_0: "1965型装甲运输车"
+ apc_equipment_1: "1975型装甲运输车"
  apc_equipment_2: "1995型装甲运输车"
  apc_equipment_3: "2015型装甲运输车"
  apc_equipment_4: "2035型装甲运输车"
@@ -166,8 +166,8 @@
  IFV_7_desc: "步兵战车是重型装甲车辆，可运载士兵小组投入战斗。搭载的步兵可以从车辆内部进行战斗，其战斗力远高于装甲运兵车。步兵战车配备重型机枪和机关炮，或搭载反坦克导弹。由步兵战车运载的步兵被称为装甲步兵或重型机械化步兵。"
  IFV_8: "2035型步兵战车"
  IFV_8_desc: "步兵战车是重型装甲车辆，可运载士兵小组投入战斗。搭载的步兵可以从车辆内部进行战斗，其战斗力远高于装甲运兵车。步兵战车配备重型机枪和机关炮，或搭载反坦克导弹。由步兵战车运载的步兵被称为装甲步兵或重型机械化步兵。"
- ifv_equipment_0: "IFV 1965"
- ifv_equipment_1: "IFV 1975"
+ ifv_equipment_0: "1965型步兵战车"
+ ifv_equipment_1: "1975型步兵战车"
  ifv_equipment_2: "1995型步兵战车"
  ifv_equipment_3: "2015型步兵战车"
  ifv_equipment_4: "2035型步兵战车"
@@ -268,45 +268,45 @@
  Anti_Air_0_desc: "便携式防空系统是肩扛式地对空导弹发射器。由于便携性要求，导弹尺寸受到严格限制，因此它们是短程系统。因此，它们对低空飞行的飞机构成威胁，对直升机也具有致命性。"
  spaa_hull: "自行防空炮"
  spaa_hull_desc: "防空车辆，也称为自行式高射炮或自行式防空系统，是一种具有专用防空能力的机动车辆。"
- SP_Anti_Air_0: "1965型自行高射炮"
+ SP_Anti_Air_0: "1965型自行防空炮"
  SP_Anti_Air_0_desc: "短程和中程车载防空系统可以发射比便携式防空导弹更大、射程更远的导弹，对所有飞机都构成威胁。它们还可以携带更多导弹。此类防空系统由专门的防空炮兵连和防空营组成。"
  SP_Anti_Air_desc: "防空车辆指重视对空作战能力的机动车辆。为了能跟上高速飞行的飞机，其通常将防空炮装置于能快速回旋、快速俯仰的炮塔上。"
  Anti_Air_1: "1985型便携防空导弹"
  Anti_Air_1_desc: "便携式防空系统是肩扛式地对空导弹发射器。由于便携性要求，导弹尺寸受到严格限制，因此它们是短程系统。因此，它们对低空飞行的飞机构成威胁，对直升机也具有致命性。"
- SP_Anti_Air_1: "1985型自行火炮"
+ SP_Anti_Air_1: "1985型自行防空炮"
  SP_Anti_Air_1_desc: "短程和中程车载防空系统可以发射比便携式防空导弹更大、射程更远的导弹，对所有飞机都构成威胁。它们还可以携带更多导弹。此类防空系统由专门的防空炮兵连和防空营组成。"
  Anti_Air_2: "2005型便携防空导弹"
  Anti_Air_2_desc: "便携式防空系统是肩扛式地对空导弹发射器。由于便携性要求，导弹尺寸受到严格限制，因此它们是短程系统。因此，它们对低空飞行的飞机构成威胁，对直升机也具有致命性。"
- SP_Anti_Air_2: "2005型自行高射炮"
+ SP_Anti_Air_2: "2005型自行防空炮"
  SP_Anti_Air_2_desc: "短程和中程车载防空系统可以发射比便携式防空导弹更大、射程更远的导弹，对所有飞机都构成威胁。它们还可以携带更多导弹。此类防空系统由专门的防空炮兵连和防空营组成。"
  Anti_Air_3: "2025型便携防空导弹"
  Anti_Air_3_desc: "便携式防空系统是肩扛式地对空导弹发射器。由于便携性要求，导弹尺寸受到严格限制，因此它们是短程系统。因此，它们对低空飞行的飞机构成威胁，对直升机也具有致命性。"
- SP_Anti_Air_3: "2025型自行高射炮"
+ SP_Anti_Air_3: "2025型自行防空炮"
  SP_Anti_Air_3_desc: "短程和中程车载防空系统可以发射比便携式防空导弹更大、射程更远的导弹，对所有飞机都构成威胁。它们还可以携带更多导弹。此类防空系统由专门的防空炮兵连和防空营组成。"
  Anti_Air_4: "2035型便携防空导弹"
  Anti_Air_4_desc: "便携式防空系统是肩扛式地对空导弹发射器。由于便携性要求，导弹尺寸受到严格限制，因此它们是短程系统。因此，它们对低空飞行的飞机构成威胁，对直升机也具有致命性。"
- SP_Anti_Air_4: "2035型自行高射炮"
+ SP_Anti_Air_4: "2035型自行防空炮"
  SP_Anti_Air_4_desc: "短程和中程车载防空系统可以发射比便携式防空导弹更大、射程更远的导弹，对所有飞机都构成威胁。它们还可以携带更多导弹。此类防空系统由专门的防空炮兵连和防空营组成。"
  nsb_Anti_Air_0: "1965型便携防空导弹"
  nsb_Anti_Air_0_desc: "便携式防空系统是肩扛式地对空导弹发射器。由于便携性要求，导弹尺寸受到严格限制，因此它们是短程系统。因此，它们对低空飞行的飞机构成威胁，对直升机也具有致命性。"
- nsb_SP_Anti_Air_0: "1965型自行高射炮"
+ nsb_SP_Anti_Air_0: "1965型自行防空炮"
  nsb_SP_Anti_Air_0_desc: "短程和中程车载防空系统可以发射比便携式防空导弹更大、射程更远的导弹，对所有飞机都构成威胁。它们还可以携带更多导弹。此类防空系统由专门的防空炮兵连和防空营组成。"
  nsb_SP_Anti_Air_desc: "防空车辆是一种具有专用防空能力的移动车辆。高射炮通常安装在具有高仰角的快速移动炮塔中，用于跟踪快速移动的飞机。"
  nsb_Anti_Air_1: "1985型便携防空导弹"
  nsb_Anti_Air_1_desc: "便携式防空系统是肩扛式地对空导弹发射器。由于便携性要求，导弹尺寸受到严格限制，因此它们是短程系统。因此，它们对低空飞行的飞机构成威胁，对直升机也具有致命性。"
- nsb_SP_Anti_Air_1: "1985型自行高射炮"
+ nsb_SP_Anti_Air_1: "1985型自行防空炮"
  nsb_SP_Anti_Air_1_desc: "短程和中程车载防空系统可以发射比便携式防空导弹更大、射程更远的导弹，对所有飞机都构成威胁。它们还可以携带更多导弹。此类防空系统由专门的防空炮兵连和防空营组成。"
  nsb_Anti_Air_2: "2005型便携防空导弹"
  nsb_Anti_Air_2_desc: "便携式防空系统是肩扛式地对空导弹发射器。由于便携性要求，导弹尺寸受到严格限制，因此它们是短程系统。因此，它们对低空飞行的飞机构成威胁，对直升机也具有致命性。"
- nsb_SP_Anti_Air_2: "2005型自行高射炮"
+ nsb_SP_Anti_Air_2: "2005型自行防空炮"
  nsb_SP_Anti_Air_2_desc: "短程和中程车载防空系统可以发射比便携式防空导弹更大、射程更远的导弹，对所有飞机都构成威胁。它们还可以携带更多导弹。此类防空系统由专门的防空炮兵连和防空营组成。"
  nsb_Anti_Air_3: "2025型便携防空导弹"
  nsb_Anti_Air_3_desc: "便携式防空系统是肩扛式地对空导弹发射器。由于便携性要求，导弹尺寸受到严格限制，因此它们是短程系统。因此，它们对低空飞行的飞机构成威胁，对直升机也具有致命性。"
- nsb_SP_Anti_Air_3: "2025型自行高射炮"
+ nsb_SP_Anti_Air_3: "2025型自行防空炮"
  nsb_SP_Anti_Air_3_desc: "短程和中程车载防空系统可以发射比便携式防空导弹更大、射程更远的导弹，对所有飞机都构成威胁。它们还可以携带更多导弹。此类防空系统由专门的防空炮兵连和防空营组成。"
  nsb_Anti_Air_4: "2035型便携防空导弹"
  nsb_Anti_Air_4_desc: "便携式防空系统是肩扛式地对空导弹发射器。由于便携性要求，导弹尺寸受到严格限制，因此它们是短程系统。因此，它们对低空飞行的飞机构成威胁，对直升机也具有致命性。"
- nsb_SP_Anti_Air_4: "2035型自行高射炮"
+ nsb_SP_Anti_Air_4: "2035型自行防空炮"
  nsb_SP_Anti_Air_4_desc: "短程和中程车载防空系统可以发射比便携式防空导弹更大、射程更远的导弹，对所有飞机都构成威胁。它们还可以携带更多导弹。此类防空系统由专门的防空炮兵连和防空营组成。"
  early_helicopter: "运输直升机"
  early_helicopter_desc: "早期直升机设计。这将允许我们研究运输直升机和攻击直升机"
@@ -342,7 +342,7 @@
  attack_submarine_6_desc: "核攻击潜艇是柴电潜艇的核版本。与柴油潜艇相比，它们携带的载荷更大，航程更远，同时体积更大，携带的反舰武器也更多、更复杂。"
  attack_submarine_7: "2035型攻击核潜艇"
  attack_submarine_7_desc: "核攻击潜艇是柴电潜艇的核版本。与柴油潜艇相比，它们携带的载荷更大，航程更远，同时体积更大，携带的反舰武器也更多、更复杂。"
- diesel_attack_submarine: "攻击型柴油潜艇"
+ diesel_attack_submarine: "攻击型柴电潜艇"
  diesel_attack_submarine_1: "1965型柴电攻击潜艇"
  diesel_attack_submarine_1_desc: "攻击型潜艇或猎杀型潜艇是专门设计用于攻击和击沉其他潜艇、水面战舰和商船的潜艇。一般来说，它们使用专门设计的鱼雷（可被动或主动瞄准目标）以及管式发射反舰导弹，但它们的体积小，限制了它们可以携带的攻击性武器的数量。"
  diesel_attack_submarine_2: "1975型柴电攻击潜艇"
@@ -460,13 +460,13 @@
  N_B_Cruiser_2_desc: "核动力巡洋舰，只能被描述为更夸张的巡洋舰。它们的速度更慢，而且价格更昂贵，但它们的核反应堆意味着它们可以航行数倍于普通船只的距离，而且它们甲板上通常有足够的武器，如果有机会，它们可以独自击落一个小型战斗群。然而，潜艇将是它们最大的威胁，因为它们的设计原则决定了它们总是被装备更适合反潜战的船只包围。"
  N_B_Cruiser_3: "1995型核动力导弹巡洋舰"
  N_B_Cruiser_3_desc: "核动力巡洋舰，只能被描述为更夸张的巡洋舰。它们的速度更慢，而且价格更昂贵，但它们的核反应堆意味着它们可以航行数倍于普通船只的距离，而且它们甲板上通常有足够的武器，如果有机会，它们可以独自击落一个小型战斗群。然而，潜艇将是它们最大的威胁，因为它们的设计原则决定了它们总是被装备更适合反潜战的船只包围。"
- N_B_Cruiser_4: "2005型核动力战斗巡洋舰"
+ N_B_Cruiser_4: "2005型核动力导弹巡洋舰"
  N_B_Cruiser_4_desc: "核动力巡洋舰，只能被描述为更夸张的巡洋舰。它们的速度更慢，而且价格更昂贵，但它们的核反应堆意味着它们可以航行数倍于普通船只的距离，而且它们甲板上通常有足够的武器，如果有机会，它们可以独自击落一个小型战斗群。然而，潜艇将是它们最大的威胁，因为它们的设计原则决定了它们总是被装备更适合反潜战的船只包围。"
- N_B_Cruiser_5: "2015型核动力战斗巡洋舰"
+ N_B_Cruiser_5: "2015型核动力导弹巡洋舰"
  N_B_Cruiser_5_desc: "核动力巡洋舰，只能被描述为更夸张的巡洋舰。它们的速度更慢，而且价格更昂贵，但它们的核反应堆意味着它们可以航行数倍于普通船只的距离，而且它们甲板上通常有足够的武器，如果有机会，它们可以独自击落一个小型战斗群。然而，潜艇将是它们最大的威胁，因为它们的设计原则决定了它们总是被装备更适合反潜战的船只包围。"
- N_B_Cruiser_6: "2025型核动力战斗巡洋舰"
+ N_B_Cruiser_6: "2025型核动力导弹巡洋舰"
  N_B_Cruiser_6_desc: "核动力巡洋舰，只能被描述为更夸张的巡洋舰。它们的速度更慢，而且价格更昂贵，但它们的核反应堆意味着它们可以航行数倍于普通船只的距离，而且它们甲板上通常有足够的武器，如果有机会，它们可以独自击落一个小型战斗群。然而，潜艇将是它们最大的威胁，因为它们的设计原则决定了它们总是被装备更适合反潜战的船只包围。"
- N_B_Cruiser_7: "2035型核动力战斗巡洋舰"
+ N_B_Cruiser_7: "2035型核动力导弹巡洋舰"
  N_B_Cruiser_7_desc: "核动力巡洋舰，只能被描述为更夸张的巡洋舰。它们的速度更慢，而且价格更昂贵，但它们的核反应堆意味着它们可以航行数倍于普通船只的距离，而且它们甲板上通常有足够的武器，如果有机会，它们可以独自击落一个小型战斗群。然而，潜艇将是它们最大的威胁，因为它们的设计原则决定了它们总是被装备更适合反潜战的船只包围。"
  landing_craft: "登陆艇"
  landing_craft_desc: "基础登陆艇设计"
