--- a/localisation/french/MD_focus_FRA_l_french.yml
+++ b/localisation/french/MD_focus_FRA_l_french.yml
@@ -746,7 +746,7 @@
  FRA_francophone_solidarity_opinion: "Solidarité francophone"
  FRA_supported_nepad_development_opinion: "Soutien au développement du NEPAD"
  FRA_preparing_launch: "Préparation du lancement français de l'ISS"
- FRA_idea_communist_revolution1: "Fires of Revolution"
- FRA_idea_communist_revolution1_desc: "The fires of revolution burn ever brighter as the wheels of time continue to change. We must seek to stoke these flames by pursuing the revolution here at home and abroad."
- FRA_idea_communist_revolution2: "Great Fires of Revolution"
- FRA_idea_communist_revolution2_desc: "The revolution is about to sweep the world for the future of mankind."
+ FRA_idea_communist_revolution1: "Les feux de la révolution"
+ FRA_idea_communist_revolution1_desc: "Les feux de la révolution brûlent de plus en plus fort à mesure que la roue du temps continue de tourner. Nous devons nous efforcer d'alimenter ces flammes en poursuivant la révolution ici et à l'étranger."
+ FRA_idea_communist_revolution2: "Les grands feux de la révolution"
+ FRA_idea_communist_revolution2_desc: "La révolution est sur le point de balayer le monde pour l'avenir de l'humanité."
