--- a/localisation/simp_chinese/MD_focus_IRQ_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_IRQ_l_simp_chinese.yml
@@ -1995,8 +1995,8 @@
  iraq_md.316.d: "几个月前，萨达姆·侯赛因决定在库尔德边境附近埋设数百枚地雷，以防止当地叛乱分子的袭击。萨达姆觉得自己不受库尔德人欢迎，因此他决定独自前往该地区，与当地人见面，以表示诚意。萨达姆随后从宫殿乘车前往库尔德斯坦边境，行驶了数小时。车上的燃料刚好够他到达边境，由于车快没油了，萨达姆开始步行。萨达姆忘记了地雷，在途中踩到地雷，当场死亡。"
  iraq_md.316.a: "安息吧，我们敬爱的领袖"
  IRQ_temp_medical_cost: "医疗费用"
- IRQ_Saddam's_pissfits: "£SOV_paranoia_text_icon [IRQ.GetLeader]之怒"
- IRQ_Saddam's_pissfits_desc: "在他的一生中，§H[IRQ.GetLeader]§!一直无法控制他的 £SOV_paranoia_text_icon §R之怒§!。他经常将愤怒发泄到他的 £personnel_cost_multiplier_modifier_texticon 军事人员或居住在 [IRQ.GetFlag] §H伊拉克§!的人们身上。他的 £SOV_paranoia_text_icon §RRage§! 给人们灌输恐惧，这可能会使他们不太可能犯错，但要付出代价。\n\n£SOV_paranoia_text_icon §R之怒§!将通过某些§H事件、决议和国策§!增加。如果 £stability_texticon §H稳定度§!低于§H40%§!，则 £SOV_paranoia_text_icon §R之怒§!将有机会每月增加§H1§!。如果 £SOV_paranoia_text_icon §R之怒§!高于§H25%§!，将发生随机事件并触发后果。如果 £SOV_paranoia_text_icon §R之怒§!达到§H50%§!，§H[IRQ.GetLeader]§!将随机执行£personnel_cost_multiplier_modifier_texticon General。如果 £stability_texticon §H稳定度§!为§H40%§!或更高，£SOV_paranoia_text_icon §RRage§!将逐渐下降。\n\n£SOV_paranoia_text_icon  §R之怒§!: [?IRQ_saddam_pissboy|%]"
  IRQ_saddam_ages_TT: "§H萨达姆·侯赛因§!将会衰老并且§R患上老年痴呆症！§!"
  IRQ_saddam_is_saddened_TT: "§H萨达姆伤心欲绝§!"
  IRQ_alzheimers_TT: "由于§R萨达姆患有老年痴呆症§!，我们可能会收到有关§H萨达姆§!反常行为的事件！"
+ IRQ_saddams_pissfits: "£SOV_paranoia_text_icon [IRQ.GetLeader]之怒"
+ IRQ_saddams_pissfits_desc: "在他的一生中，§H[IRQ.GetLeader]§!一直无法控制他的 £SOV_paranoia_text_icon §R之怒§!。他经常将愤怒发泄到他的 £personnel_cost_multiplier_modifier_texticon 军事人员或居住在 [IRQ.GetFlag] §H伊拉克§!的人们身上。他的 £SOV_paranoia_text_icon §R之怒§! 给人们灌输恐惧，这可能会使他们不太可能犯错，但要付出代价。\n\n£SOV_paranoia_text_icon §R之怒§!将通过某些§H事件、决议和国策§!增加。如果 £stability_texticon §H稳定度§!低于§H40%§!，则 £SOV_paranoia_text_icon §R之怒§!将有机会每月增加§H1§!。如果 £SOV_paranoia_text_icon §R之怒§!高于§H25%§!，将发生随机事件并触发后果。如果 £SOV_paranoia_text_icon §R之怒§!达到§H50%§!，§H[IRQ.GetLeader]§!将随机执行£personnel_cost_multiplier_modifier_texticon 。如果 £stability_texticon §H稳定度§!为§H40%§!或更高，£SOV_paranoia_text_icon §RRage§!将逐渐下降。\n\n£SOV_paranoia_text_icon  §R之怒§!: [?IRQ_saddam_pissboy|%]"
