Added Quarterly GDP Growth Rate and some other stuff

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,9 @@ v1.10.5
   - Military spending now raises the minimum of "The Military" opinion
   - All Intelligence Agencies upgrades will now give the "Intelligence Community" opinion
   - Ideological powers decisions should now give opinion relating to the specific focus group that they impact
+  - Reduced the economic cycle upgrade cost from 7.5% to 5%
+  - Reduced the at war increase for the military expenditure by 20%
+  - Positive economic events are now more likely to happen if you have a high GDP Quarterly Growth Rate
 
  Bugfix:
   - Fixed the missing model errors from TOTA (added blank asset files)
@@ -34,6 +37,8 @@ v1.10.5
 
  User Interface:
   - Added an "Unemployment Rate" map mode
+  - You can now see your last quarter's GDP growth rate in the GDP tooltip
+  - You can now reduce the Employment Target of Commercialized Agriculture Districts
 
 v1.10.4
 
