--- a/localisation/english/MD_money_l_english.yml
+++ b/localisation/english/MD_money_l_english.yml
@@ -24,7 +24,7 @@
  # Foreign Income
  F_TAX_RATE_TOOLTIP: "Their §HAverage Tax Rate§! is [?tax_rate]%.\n\n§YCorporate Tax Rate:§! [?corporate_tax_rate]%\n§YPopulation Tax Rate:§! [?population_tax_rate]%\n"
  F_TAX_GAIN_TOOLTIP: "They gain $[?display_income] §Hbillion§! each week in income."
- F_TAX_GAIN_TOOLTIP_DELAYED: "GDP of §Y[THIS.GetName]§!: $§U[?THIS.gdp_total|0]§!b\nGDP/C of §Y[THIS.GetName]§!: $§U[?THIS.gdp_per_capita]§!k\n---------\n§CPopulation Income:§! $§G[?population_tax|+3]§!\n§LCorporate Income:§! $§G[?corporate_tax|+3]§!\n§GInternational Investments:§! $§G[?int_investments_rate|+3]§!\n§UResource Exports:§! $§G[?resource_sale_rate|+3]§!\n§HAdditional Income:§! $§G[?additional_income_rate|+3]§!\n\nGross Income: $§G[?display_income]§!"
+ F_TAX_GAIN_TOOLTIP_DELAYED: "GDP of §Y[THIS.GetName]§!: $§U[?THIS.gdp_total|0]§!b\nGDP/C of §Y[THIS.GetName]§!: $§U[?THIS.gdp_per_capita]§!k\n\nMost Recent §YQuarterly GDP Growth Rate§!: [?last_quarter_gdp_growth_rate|%Y]\n---------\n§CPopulation Income:§! $§G[?population_tax|+3]§!\n§LCorporate Income:§! $§G[?corporate_tax|+3]§!\n§GInternational Investments:§! $§G[?int_investments_rate|+3]§!\n§UResource Exports:§! $§G[?resource_sale_rate|+3]§!\n§HAdditional Income:§! $§G[?additional_income_rate|+3]§!\n\nGross Income: $§G[?display_income]§!"
 
  #Open Economy Menu Tooltips
  OPEN_ECONOMY_BUTTON: "Open §YEconomic Preview§! Interface"
@@ -32,7 +32,7 @@
  GDP_TOTAL: "GDP"
  GDP_TOTAL_DESC: "Our §YGross Domestic Product§! (GDP) is the value measure of all products and services produced in the country. Millennium Dawn uses GDP adjusted with PPP (Purchasing Power Parity) as this value takes local economic conditions into effect, making the country comparison more useful."
  NUM_GDP_TOTAL: "$$§U[?ROOT.gdp_total|1]§!b"
- NUM_GDP_TOTAL_DESC: "Our §YGDP§! is currently $§U[?ROOT.gdp_total|3]§! billion"
+ NUM_GDP_TOTAL_DESC: "Our §YGDP§! is currently $§U[?ROOT.gdp_total|3]§! billion.\n\nRecent §YQuarterly GDP Growth Rate§!: [?last_quarter_gdp_growth_rate|%Y].\n\nHint: The higher your §YQuarterly GDP Growth Rate§! the more likely you are to get positive economic events."
  NUM_GDP_TOTAL_DELAYED_DESC: "Approximate Contribution of Industries by Percent:\n§PCivilian Factories§!: [?ROOT.civil_fac_percent|%]\n§OMilitary Factories§!: [?ROOT.military_fac_percent|%]\n§BNaval Dockyards§!: [?ROOT.dockyard_fac_percent|%]\n§COffice Parks§!: [?ROOT.office_fac_percent|%]\n§GNon-Commercialized Agriculture§!: [?ROOT.agriculture_percent|%]\n§YCommercialized Agriculture Districts§!: [?ROOT.agriculture_district_fac_percent|%]\n§GResource Extraction§!: [?ROOT.resources_percent|%]\n"
  GDP_PER_CAPITA: "GDP/C"
  GDP_PER_CAPITA_DESC: "This number represents our §YGDP per Capita§! or §YGDP/C§!. It represents the output of every person in the nation."
@@ -463,6 +463,8 @@
  naval_factory_employment_button_delayed_tt: "When we have more jobs than workers, it may be beneficial in certain situations to increase or decrease how many workers we allocate to each sector (factories/offices) to allow for more workers to go to the other sectors.\n\nPolitical Power: §R-20§!\n\n£click_left §YL Click§! to reduce employment level of Naval Factories.\n£click_right §YR Click§! to increase it.\n\nCurrent Target Employment  Level is: §Y[?ROOT.naval_factory_employment_var|%]§!"
  office_employment_button_tt: "§YOffices Employment§!"
  office_employment_button_delayed_tt: "When we have more jobs than workers, it may be beneficial in certain situations to increase or decrease how many workers we allocate to each sector (factories/offices) to allow for more workers to go to the other sectors.\n\nPolitical Power: §R-20§!\n\n£click_left §YL Click§! to reduce employment level of Offices.\n£click_right §YR Click§! to increase it.\n\nCurrent Target Employment Level is: §Y[?ROOT.office_employment_var|%]§!"
+ ag_district_employment_button_tt: "§YCommercialized Agriculture District Employment§!"
+ ag_district_employment_button_delayed_tt: "When we have more jobs than workers, it may be beneficial in certain situations to increase or decrease how many workers we allocate to each sector (factories/offices) to allow for more workers to go to the other sectors.\n\nPolitical Power: §R-20§!\n\n£click_left §YL Click§! to reduce employment level of Commercialized Agriculture District.\n£click_right §YR Click§! to increase it.\n\nCurrent Target Employment Level is: §Y[?ROOT.agriculture_district_employment_var|%]§!"
  lease_military_factories_tt: "§YLease Military Factories§!"
  lease_military_factories_delayed_tt: "Autartic production of military goods is something of the past. We can contract and lease military factories from abroad to produce the goods we need.\n\n§YAdditional Expenses:§! $§R[?lease_military_factories_cost]§!\n\nThese factories will not generate us §YGDP§! or §YCorporate Income§!\nCurrently Leased Factories: §Y[?leased_military_factories]§!\n\n[!lease_military_factories_click]\n§RRight Click to lower leased amount§!"
  lease_civilian_factories_tt: "§YLease Civilian Complexes§!"
