fixed a couple other random bugs

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -22,6 +22,7 @@ v1.10.5
   - Fixed the "Businesses in the East" not giving opinion when funding startup
   - Fixed Hezbollah not giving APCs in your weekly income
   - Fixed a missing icon in the Libyan tree
+  - Fixed the HEU enrichment limitation not actually working
 
  Content:
   - Added additional decisions to a variety of different internal factions
