--- a/localisation/english/MD_focus_GEO_l_english.yml
+++ b/localisation/english/MD_focus_GEO_l_english.yml
@@ -320,9 +320,9 @@
  georg_military.1.d: "Georgia has successfully reformed their Military; there has been an influx of recruits signing up to defend the glorious country."
  georg_military.1.a: "You are pleased with the result."
 
- georg.1243.t: "Georgia demands that Russia withdraw all troops from their country."
- georg.1243.d: "In the light of recent events, Georgia has sent a notice to Russia, demanding that they withdraw and decommission ALL troops and bases within the land of Georgia."
- georg.1243.a: "You officially withdraw Russia's military access to Georgia."
+ georg.1243.t: "Georgia Demands Russian Forces Withdrawal"
+ georg.1243.d: "In the light of recent events, the Georgian government has sent a notice to our government demanding a formal withdrawal of all of our military personnel from the country. The demands also include decomissioning all of the military bases owned and operated by our military, the Russian Armed Forces. Our forces have been shifted away from their posts and are being sent back across our border with Georgia."
+ georg.1243.a: "An Unfortunate Circumstance"
 
  georg.1244.t: "Seize old soviet air bases and their assets in our territory."
  georg.1244.d: "Today, the Georgian Armed Forces raided and reclaimed old Soviet air bases, taking any and all remaining assets."
