--- a/localisation/english/MD_decisions_l_english.yml
+++ b/localisation/english/MD_decisions_l_english.yml
@@ -765,7 +765,7 @@
 
  ### Anti Bully ###
  Anti_Bully: "Public War Weariness"
- Anti_Bully_desc: "Our country is now at war. The issues that accompany conflict are now ever important. The most effective way to win a war is to keep the people's support of it going. Once the people lose their support of a conflict we have already lost.\n\n§YNote: The people do not appreciate long wars. The more decisive the war the less penalizing the war.§!\n\nCurrent War Support Penalty: [?war_support_factor_var|R0%]\n"
+ Anti_Bully_desc: "\n\n\n\n\n\n£MAIN_desctext_weariness\n\n\n\n\n\n\n\n\nOur country is now at war. The issues that accompany conflict are now ever important. The most effective way to win a war is to keep the people's support of it going. Once the people lose their support of a conflict we have already lost.\n\n§YNote: The people do not appreciate long wars. The more decisive the war the less penalizing the war.§!\n\nCurrent War Support Penalty: [?war_support_factor_var|R0%]\n"
  AB_offer_stalemate_Atk: "Offer a Ceasefire"
  AB_offer_stalemate_Atk_desc: "The war has dragged own for far too long. The combat has broken down into nothing more than an extended stalemate. It was a massive failure and the best option for us is to sue for peace."
  AB_offer_stalemate_Def: "Offer a Ceasefire"
