--- a/localisation/english/MD_middle_east_content_l_english.yml
+++ b/localisation/english/MD_middle_east_content_l_english.yml
@@ -824,8 +824,8 @@
  gcc.21.d: "Following a long accession process, [FROM.GetNameDef] has managed to secure membership of the Gulf Cooperation Council, a regional organization founded by [SAU.GetNameDef], [BHR.GetNameDef], [KUW.GetNameDef], [OMA.GetNameDef], [QAT.GetNameDef] and [UAE.GetNameDef]. This development represents a significant expansion of the GCC which for a long time remained wary of accepting new members into its ranks. [FROM.GetNameDef] will now be able to take advantage of a range of economic, political and military benefits that GCC membership confers."
  gcc.21.a: "The GCC grows stronger..."
 
- gcc.22.t: "The [FROM.GetAdjective]s are requesting bloc arms sales to the GCC"
- gcc.22.d: "The Gulf Cooperation Council has historically aligned itself with the [ROOT.GetAdjective] government, and is therefore an important [ROOT.GetAdjective] ally in the Arab world. The [FROM.GetAdjective]s have argued that granting bloc arms sales to the GCC will help them defend against our shared enemies by providing GCC members with much needed arms and enhacing their force interoperability."
+ gcc.22.t: "The [FROM.GetAdjective]s are requesting block arms sales to the GCC"
+ gcc.22.d: "The Gulf Cooperation Council has historically aligned itself with the [ROOT.GetAdjective] government, and is therefore an important [ROOT.GetAdjective] ally in the Arab world. The [FROM.GetAdjective]s have argued that granting block arms sales to the GCC will help them defend against our shared enemies by providing GCC members with much needed arms and enhacing their force interoperability."
  gcc.22.a: "Let's give them the guns."
  gcc.22.b: "We need them for ourselves."
 
