--- a/localisation/english/MD_middle_east_content_l_english.yml
+++ b/localisation/english/MD_middle_east_content_l_english.yml
@@ -829,8 +829,8 @@
  gcc.22.a: "Let's give them the guns."
  gcc.22.b: "We need them for ourselves."
 
- gcc.23.t: "[FROM.GetNameDef] Finalizes GCC Bloc Arms Sale"
- gcc.23.d: "Following up on a request by member states of the Gulf Cooperation Council, the [FROM.GetAdjective] has aproved a bloc arms sale to the organization as a whole. This move has been touted as a signal of the GCC's growing unity, as in the past the various militaries of the GCC were unintegrated and uncoordinated, a phenomenon which was exacerbated by their procurement of arms from different suppliers. [FROM.GetLeader] has expressed hope that this sale would help the GCC to combat shared threats in the Middle East more effectively. The Arab Gulf states that make up the GCC, for their part, have expressed delight at the success of this deal."
+ gcc.23.t: "[FROM.GetNameDef] Finalizes GCC Block Arms Sale"
+ gcc.23.d: "Following up on a request by member states of the Gulf Cooperation Council, the [FROM.GetAdjective] has aproved a block arms sale to the organization as a whole. This move has been touted as a signal of the GCC's growing unity, as in the past the various militaries of the GCC were unintegrated and uncoordinated, a phenomenon which was exacerbated by their procurement of arms from different suppliers. [FROM.GetLeader] has expressed hope that this sale would help the GCC to combat shared threats in the Middle East more effectively. The Arab Gulf states that make up the GCC, for their part, have expressed delight at the success of this deal."
 
  gcc.24.t: "[FROM.GetNameDef] is Pressuring Us to Support New GCC Member"
  gcc.24.d: "[pressured_to_accept] is currently seeking membership of the Gulf Cooperation Council, and is being supported in this endeavor by [FROM.GetNameDef]. We should consider whether to also support [pressured_to_accept]'s efforts."
