--- a/localisation/english/MD_focus_GEO_l_english.yml
+++ b/localisation/english/MD_focus_GEO_l_english.yml
@@ -96,7 +96,7 @@
  GEO_deal_with_turkey_adjara: "Deal with Turkey on Adjara"
  GEO_deal_with_turkey_adjara_desc: "It's time to sign relevant agreements with Turkey on cooperation on the topic of Adjara. Mutual cooperation will be a good pretext for improving relations."
  GEO_close_monadire: "Close the Monadire"
- GEO_close_monadire_desc: "Monadire should be banned and Kviciani imprisoned. There is no other chnace!"
+ GEO_close_monadire_desc: "Monadire should be banned and Kviciani imprisoned. There is no other choice!"
  GEO_clear_dissidents_monadire: "Clear out the Monadire dissidents"
  GEO_clear_dissidents_monadire_desc: "Purging them is the only viable option!"
  GEO_allow_kviciani: "Allow Kviciani"
